Applying some of the refactorings from COLLECTIONS-312
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/collections/trunk@956291 13f79535-47bb-0310-9956-ffa450edef68